# Sphere

./: CMakeLists.txt
res/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
